workloads/apps/cf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cf
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cf
