workloads/apps/cf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - cf.ozeliurs.com
      secretName: cf-tls
  rules:
    - host: cf.ozeliurs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cf
                port:
                  number: 80
